# tdd_project_example

./: .gitignore  README.md
tdd-example/: Makefile  pyproject.toml
tdd-example/tdd_example/: calculette.py  main.py  tarification.py
tdd-example/tests/: test_tarification.py
