[tool.poetry]
name = "tdd-example"
version = "0.1.0"
description = ""
authors = ["Amélie Rondot <amelie.rondot@multi.coop>"]

[tool.poetry.dependencies]
python = "^3.10"
typing-extensions = "^4.6.1"
mypy = "^1.11.2"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"


[tool.poetry.scripts]
calculette = "tdd_example.calculette:start"